@@ -1,0 +1,41 @@
+<html>
+<head>
+<title>Mac OS Plugin</title>
+</head>
+
+<body bgcolor="#FFFFFF">
+<table
+    summary="Header"
+    bgcolor="#CCCCFF"
+    cellspacing="0"
+    border="0"
+    width="100%"
+    cols="2"
+>
+  <tr width="100%"> 
+    <td valign="TOP"><strong><font size="+2">Mac OS Plugin</font></strong></td>
+    <td valign="TOP" align="RIGHT"><font size="-1"> <strong>Version 1.0 (Nov. 
+      6, 2001)</strong> <br>
+      By Kris Kopicki &lt;krisk4@mac.com&gt; </font></td>
+  </tr>
+</table>
+<h3>Provides Mac OS specific features, such as:</h3>
+<ul>
+  <li>jEdit exits cleanly when using Command-Q or &quot;Quit&quot; from the &quot;File&quot; 
+    menu.</li>
+  <li>Files created or associated with jEdit can now be opened from the Finder, 
+    by either double-clicking the file's icon or dragging the file's icon onto 
+    the jEdit application icon.</li>
+  <li>jEdit is assigned as the creator of new files.</li>
+  <li>A functional &quot;About ...&quot; command under Mac OS (Classic only).</li>
+</ul>
+<h3>Known Issues:</h3>
+<ul>
+  <li>Does not work under Mac OS X 10.0.x, as the MRJToolkit routines were not 
+    implemented until Mac OS X 10.1.</li>
+  <li>Files opened in the Finder before jEdit is running are not open in jEdit 
+    (Mac OS X only).</li>
+</ul>
+<p>&nbsp;</p>
+</body>
+</html>
